src/y.output
Terminals unused in grammar

   RETURN


Rules useless in parser due to conflicts

   39 initializer: OPEN_CURLY initializer_list CLOSED_CURLY
   40            | OPEN_SQUARE initializer_list CLOSED_SQUARE


State 21 conflicts: 1 shift/reduce
State 44 conflicts: 4 shift/reduce
State 47 conflicts: 1 shift/reduce
State 48 conflicts: 2 shift/reduce
State 51 conflicts: 1 shift/reduce
State 96 conflicts: 1 reduce/reduce
State 187 conflicts: 1 shift/reduce
State 188 conflicts: 1 shift/reduce
State 189 conflicts: 2 shift/reduce
State 190 conflicts: 2 shift/reduce
State 191 conflicts: 2 shift/reduce
State 192 conflicts: 2 shift/reduce
State 196 conflicts: 1 shift/reduce
State 232 conflicts: 3 reduce/reduce
State 233 conflicts: 3 reduce/reduce
State 245 conflicts: 1 shift/reduce
State 300 conflicts: 28 shift/reduce
State 319 conflicts: 28 shift/reduce


Grammar

    0 $accept: statement_list $end

    1 statement_list: statement statement_list
    2               | %empty

    3 statement: expression_statement
    4          | selection_statement
    5          | iteration_statement
    6          | OPEN_CURLY statement_list CLOSED_CURLY
    7          | declaration

    8 declaration: type_specifier declarator ASSIGN assignment_expression SEMI

    9 declarator: ID
   10           | declarator OPEN_SQUARE CLOSED_SQUARE

   11 type_specifier: VOID
   12               | CHAR
   13               | INT
   14               | FLOAT
   15               | BOOL
   16               | PROCESSOR
   17               | LINK
   18               | CLUSTER
   19               | JOB
   20               | MEMORY

   21 primary_expression: ID
   22                   | NUM
   23                   | REAL
   24                   | STRING_LITERAL
   25                   | OPEN_BRACKET expression CLOSED_BRACKET
   26                   | constructor
   27                   | mem_func

   28 postfix_expression: primary_expression
   29                   | postfix_expression OPEN_SQUARE expression CLOSED_SQUARE
   30                   | postfix_expression OPEN_BRACKET CLOSED_BRACKET
   31                   | postfix_expression OPEN_BRACKET argument_expression_list CLOSED_BRACKET
   32                   | postfix_expression DOT ID
   33                   | ID DOT mem_func
   34                   | postfix_expression PTR_OP ID
   35                   | postfix_expression INC_OP
   36                   | postfix_expression DEC_OP
   37                   | OPEN_CURLY initializer_list CLOSED_CURLY
   38                   | OPEN_SQUARE initializer_list CLOSED_SQUARE

   39 initializer: OPEN_CURLY initializer_list CLOSED_CURLY
   40            | OPEN_SQUARE initializer_list CLOSED_SQUARE
   41            | assignment_expression

   42 initializer_list: initializer
   43                 | initializer_list COMMA initializer

   44 argument_expression_list: assignment_expression
   45                         | argument_expression_list COMMA assignment_expression

   46 unary_expression: postfix_expression
   47                 | INC_OP unary_expression
   48                 | DEC_OP unary_expression
   49                 | unary_operator unary_expression

   50 unary_operator: AMP
   51               | STAR
   52               | PLUS
   53               | MINUS
   54               | TILDE
   55               | NOT

   56 multiplicative_expression: unary_expression
   57                          | multiplicative_expression STAR unary_expression
   58                          | multiplicative_expression DIVIDE unary_expression
   59                          | multiplicative_expression MODULUS unary_expression

   60 additive_expression: multiplicative_expression
   61                    | additive_expression PLUS multiplicative_expression
   62                    | additive_expression MINUS multiplicative_expression

   63 relational_expression: additive_expression
   64                      | relational_expression LT additive_expression
   65                      | relational_expression GT additive_expression
   66                      | relational_expression LE_OP additive_expression
   67                      | relational_expression GE_OP additive_expression

   68 equality_expression: relational_expression
   69                    | equality_expression EQ_OP relational_expression
   70                    | equality_expression NE_OP relational_expression

   71 and_expression: equality_expression
   72               | and_expression AMP equality_expression

   73 exclusive_or_expression: and_expression
   74                        | exclusive_or_expression XOR and_expression

   75 inclusive_or_expression: exclusive_or_expression
   76                        | inclusive_or_expression PIPE exclusive_or_expression

   77 logical_and_expression: inclusive_or_expression
   78                       | logical_and_expression AND_OP inclusive_or_expression

   79 logical_or_expression: logical_and_expression
   80                      | logical_or_expression OR_OP logical_and_expression

   81 conditional_expression: logical_or_expression
   82                       | logical_or_expression QUES expression COLON conditional_expression

   83 assignment_expression: conditional_expression
   84                      | unary_expression ASSIGN assignment_expression

   85 expression: assignment_expression
   86           | expression COMMA assignment_expression

   87 iteration_statement: WHILE OPEN_BRACKET expression CLOSED_BRACKET statement
   88                    | DO statement WHILE OPEN_BRACKET expression CLOSED_BRACKET SEMI
   89                    | FOR OPEN_BRACKET expression_statement expression_statement CLOSED_BRACKET statement
   90                    | FOR OPEN_BRACKET expression_statement expression_statement expression CLOSED_BRACKET statement
   91                    | FOR OPEN_BRACKET declaration expression_statement CLOSED_BRACKET statement
   92                    | FOR OPEN_BRACKET declaration expression_statement expression CLOSED_BRACKET statement

   93 selection_statement: IF OPEN_BRACKET expression CLOSED_BRACKET statement ELSE statement
   94                    | IF OPEN_BRACKET expression CLOSED_BRACKET statement

   95 expression_statement: SEMI
   96                     | expression SEMI

   97 assign_colon: ASSIGN
   98             | COLON

   99 constructor: PROCESSOR OPEN_BRACKET param_list_proc CLOSED_BRACKET
  100            | MEMORY OPEN_BRACKET param_list_mem CLOSED_BRACKET
  101            | JOB OPEN_BRACKET param_list_job CLOSED_BRACKET
  102            | LINK OPEN_BRACKET param_list_link CLOSED_BRACKET
  103            | CLUSTER OPEN_BRACKET param_list_cluster CLOSED_BRACKET
  104            | SCHEDULER OPEN_BRACKET param_list_scheduler CLOSED_BRACKET

  105 param_list_job: job_param1 COMMA job_param2 COMMA job_param3 COMMA job_param4 COMMA job_param5

  106 job_param1: JOB_ID assign_colon assignment_expression
  107           | assignment_expression

  108 job_param2: FLOPS_REQUIRED assign_colon assignment_expression
  109           | assignment_expression

  110 job_param3: DEADLINE assign_colon assignment_expression
  111           | assignment_expression

  112 job_param4: MEM_REQUIRED assign_colon assignment_expression
  113           | assignment_expression

  114 job_param5: AFFINITY assign_colon assignment_expression
  115           | assignment_expression

  116 param_list_proc: proc_param1 COMMA proc_param2 COMMA proc_param3 opt_proc_param4 opt_proc_param5 opt_proc_param6

  117 proc_param1: ISA assign_colon assignment_expression
  118            | assignment_expression

  119 proc_param2: CLOCK_SPEED assign_colon assignment_expression
  120            | assignment_expression

  121 proc_param3: L1_MEMORY assign_colon assignment_expression
  122            | assignment_expression
  123            | L1_MEMORY assign_colon assignment_expression COMMA
  124            | assignment_expression COMMA

  125 opt_proc_param4: L2_MEMORY assign_colon assignment_expression
  126                | L2_MEMORY assign_colon assignment_expression COMMA
  127                | assignment_expression
  128                | assignment_expression COMMA
  129                | %empty

  130 opt_proc_param5: SCHED assign_colon assignment_expression
  131                | assignment_expression
  132                | SCHED assign_colon assignment_expression COMMA
  133                | assignment_expression COMMA
  134                | %empty

  135 opt_proc_param6: NAME assign_colon assignment_expression
  136                | assignment_expression
  137                | %empty

  138 param_list_mem: mem_param1 COMMA mem_param2 opt_mem_param3

  139 mem_param1: MEMORY_TYPE assign_colon assignment_expression
  140           | assignment_expression

  141 mem_param2: MEM_SIZE assign_colon assignment_expression
  142           | assignment_expression
  143           | MEM_SIZE assign_colon assignment_expression COMMA
  144           | assignment_expression COMMA

  145 opt_mem_param3: NAME assign_colon assignment_expression
  146               | assignment_expression
  147               | %empty

  148 param_list_link: link_param1 COMMA link_param2 COMMA link_param3 COMMA link_param4 opt_link_param5

  149 link_param1: START_POINT assign_colon assignment_expression
  150            | assignment_expression

  151 link_param2: END_POINT assign_colon assignment_expression
  152            | assignment_expression

  153 link_param3: BANDWIDTH assign_colon assignment_expression
  154            | assignment_expression

  155 link_param4: CHANNEL_CAPACITY assign_colon assignment_expression
  156            | assignment_expression
  157            | CHANNEL_CAPACITY assign_colon assignment_expression COMMA
  158            | assignment_expression COMMA

  159 opt_link_param5: NAME assign_colon assignment_expression
  160                | assignment_expression
  161                | %empty

  162 param_list_cluster: cluster_param1 COMMA cluster_param2 COMMA cluster_param3 COMMA cluster_param4 opt_cluster_param5 opt_cluster_param6

  163 cluster_param1: assignment_expression

  164 cluster_param2: TOPOLOGY assign_colon assignment_expression
  165               | assignment_expression

  166 cluster_param3: LINK_BANDWIDTH assign_colon assignment_expression
  167               | assignment_expression

  168 cluster_param4: LINK_CAPACITY assign_colon assignment_expression
  169               | assignment_expression
  170               | LINK_CAPACITY assign_colon assignment_expression COMMA
  171               | assignment_expression COMMA

  172 opt_cluster_param5: SCHED assign_colon assignment_expression
  173                   | assignment_expression
  174                   | SCHED assign_colon assignment_expression COMMA
  175                   | assignment_expression COMMA
  176                   | %empty

  177 opt_cluster_param6: NAME assign_colon assignment_expression
  178                   | %empty

  179 param_list_scheduler: schedule_param1 opt_schedule_param2

  180 schedule_param1: ALGO assign_colon assignment_expression
  181                | assignment_expression
  182                | ALGO assign_colon assignment_expression COMMA
  183                | assignment_expression COMMA

  184 opt_schedule_param2: NAME assign_colon assignment_expression
  185                    | assignment_expression
  186                    | %empty

  187 mem_func: GET_AVAILABLE_MEMORY OPEN_BRACKET CLOSED_BRACKET
  188         | GET_MEMORY OPEN_BRACKET CLOSED_BRACKET
  189         | IS_RUNNING OPEN_BRACKET CLOSED_BRACKET
  190         | SUBMIT_JOBS OPEN_BRACKET assignment_expression CLOSED_BRACKET
  191         | GET_CLOCK_SPEED OPEN_BRACKET CLOSED_BRACKET
  192         | RUN OPEN_BRACKET assignment_expression CLOSED_BRACKET
  193         | DISCARD_JOB OPEN_BRACKET assignment_expression CLOSED_BRACKET


Terminals, with rules where they appear

$end (0) 0
error (256)
CHAR (258) 12
ELSE (259) 93
FLOAT (260) 14
FOR (261) 89 90 91 92
IF (262) 93 94
INT (263) 13
RETURN (264)
VOID (265) 11
WHILE (266) 87 88
PTR_OP (267) 34
INC_OP (268) 35 47
DEC_OP (269) 36 48
AND_OP (270) 78
OR_OP (271) 80
LT (272) 64
GT (273) 65
LE_OP (274) 66
GE_OP (275) 67
EQ_OP (276) 69
NE_OP (277) 70
BOOL (278) 15
DO (279) 88
NOT (280) 55
AMP (281) 50 72
TILDE (282) 54
STAR (283) 51 57
ASSIGN (284) 8 84 97
PROCESSOR (285) 16 99
LINK (286) 17 102
CLUSTER (287) 18 103
JOB (288) 19 101
MEMORY (289) 20 100
JOB_ID (290) 106
FLOPS_REQUIRED (291) 108
DEADLINE (292) 110
AFFINITY (293) 114
ALGO (294) 180 182
ISA (295) 117
CLOCK_SPEED (296) 119
MEM_REQUIRED (297) 112
ID (298) 9 21 32 33 34
MEMORY_TYPE (299) 139
SCHEDULER (300) 104
NUM (301) 22
REAL (302) 23
STRING_LITERAL (303) 24
L1_MEMORY (304) 121 123
L2_MEMORY (305) 125 126
MEM_SIZE (306) 141 143
NAME (307) 135 145 159 177 184
START_POINT (308) 149
END_POINT (309) 151
BANDWIDTH (310) 153
CHANNEL_CAPACITY (311) 155 157
TOPOLOGY (312) 164
LINK_CAPACITY (313) 168 170
LINK_BANDWIDTH (314) 166
GET_AVAILABLE_MEMORY (315) 187
GET_MEMORY (316) 188
IS_RUNNING (317) 189
SUBMIT_JOBS (318) 190
GET_CLOCK_SPEED (319) 191
DISCARD_JOB (320) 193
RUN (321) 192
OPEN_BRACKET (322) 25 30 31 87 88 89 90 91 92 93 94 99 100 101 102
    103 104 187 188 189 190 191 192 193
CLOSED_BRACKET (323) 25 30 31 87 88 89 90 91 92 93 94 99 100 101 102
    103 104 187 188 189 190 191 192 193
OPEN_CURLY (324) 6 37 39
CLOSED_CURLY (325) 6 37 39
OPEN_SQUARE (326) 10 29 38 40
CLOSED_SQUARE (327) 10 29 38 40
SEMI (328) 8 88 95 96
COMMA (329) 43 45 86 105 116 123 124 126 128 132 133 138 143 144 148
    157 158 162 170 171 174 175 182 183
DOT (330) 32 33
PLUS (331) 52 61
MINUS (332) 53 62
DIVIDE (333) 58
MODULUS (334) 59
PIPE (335) 76
XOR (336) 74
QUES (337) 82
COLON (338) 82 98
SCHED (339) 130 132 172 174


Nonterminals, with rules where they appear

$accept (85)
    on left: 0
statement_list (86)
    on left: 1 2, on right: 0 1 6
statement (87)
    on left: 3 4 5 6 7, on right: 1 87 88 89 90 91 92 93 94
declaration (88)
    on left: 8, on right: 7 91 92
declarator (89)
    on left: 9 10, on right: 8 10
type_specifier (90)
    on left: 11 12 13 14 15 16 17 18 19 20, on right: 8
primary_expression (91)
    on left: 21 22 23 24 25 26 27, on right: 28
postfix_expression (92)
    on left: 28 29 30 31 32 33 34 35 36 37 38, on right: 29 30 31 32
    34 35 36 46
initializer (93)
    on left: 39 40 41, on right: 42 43
initializer_list (94)
    on left: 42 43, on right: 37 38 39 40 43
argument_expression_list (95)
    on left: 44 45, on right: 31 45
unary_expression (96)
    on left: 46 47 48 49, on right: 47 48 49 56 57 58 59 84
unary_operator (97)
    on left: 50 51 52 53 54 55, on right: 49
multiplicative_expression (98)
    on left: 56 57 58 59, on right: 57 58 59 60 61 62
additive_expression (99)
    on left: 60 61 62, on right: 61 62 63 64 65 66 67
relational_expression (100)
    on left: 63 64 65 66 67, on right: 64 65 66 67 68 69 70
equality_expression (101)
    on left: 68 69 70, on right: 69 70 71 72
and_expression (102)
    on left: 71 72, on right: 72 73 74
exclusive_or_expression (103)
    on left: 73 74, on right: 74 75 76
inclusive_or_expression (104)
    on left: 75 76, on right: 76 77 78
logical_and_expression (105)
    on left: 77 78, on right: 78 79 80
logical_or_expression (106)
    on left: 79 80, on right: 80 81 82
conditional_expression (107)
    on left: 81 82, on right: 82 83
assignment_expression (108)
    on left: 83 84, on right: 8 41 44 45 84 85 86 106 107 108 109 110
    111 112 113 114 115 117 118 119 120 121 122 123 124 125 126 127
    128 130 131 132 133 135 136 139 140 141 142 143 144 145 146 149
    150 151 152 153 154 155 156 157 158 159 160 163 164 165 166 167
    168 169 170 171 172 173 174 175 177 180 181 182 183 184 185 190
    192 193
expression (109)
    on left: 85 86, on right: 25 29 82 86 87 88 90 92 93 94 96
iteration_statement (110)
    on left: 87 88 89 90 91 92, on right: 5
selection_statement (111)
    on left: 93 94, on right: 4
expression_statement (112)
    on left: 95 96, on right: 3 89 90 91 92
assign_colon (113)
    on left: 97 98, on right: 106 108 110 112 114 117 119 121 123 125
    126 130 132 135 139 141 143 145 149 151 153 155 157 159 164 166
    168 170 172 174 177 180 182 184
constructor (114)
    on left: 99 100 101 102 103 104, on right: 26
param_list_job (115)
    on left: 105, on right: 101
job_param1 (116)
    on left: 106 107, on right: 105
job_param2 (117)
    on left: 108 109, on right: 105
job_param3 (118)
    on left: 110 111, on right: 105
job_param4 (119)
    on left: 112 113, on right: 105
job_param5 (120)
    on left: 114 115, on right: 105
param_list_proc (121)
    on left: 116, on right: 99
proc_param1 (122)
    on left: 117 118, on right: 116
proc_param2 (123)
    on left: 119 120, on right: 116
proc_param3 (124)
    on left: 121 122 123 124, on right: 116
opt_proc_param4 (125)
    on left: 125 126 127 128 129, on right: 116
opt_proc_param5 (126)
    on left: 130 131 132 133 134, on right: 116
opt_proc_param6 (127)
    on left: 135 136 137, on right: 116
param_list_mem (128)
    on left: 138, on right: 100
mem_param1 (129)
    on left: 139 140, on right: 138
mem_param2 (130)
    on left: 141 142 143 144, on right: 138
opt_mem_param3 (131)
    on left: 145 146 147, on right: 138
param_list_link (132)
    on left: 148, on right: 102
link_param1 (133)
    on left: 149 150, on right: 148
link_param2 (134)
    on left: 151 152, on right: 148
link_param3 (135)
    on left: 153 154, on right: 148
link_param4 (136)
    on left: 155 156 157 158, on right: 148
opt_link_param5 (137)
    on left: 159 160 161, on right: 148
param_list_cluster (138)
    on left: 162, on right: 103
cluster_param1 (139)
    on left: 163, on right: 162
cluster_param2 (140)
    on left: 164 165, on right: 162
cluster_param3 (141)
    on left: 166 167, on right: 162
cluster_param4 (142)
    on left: 168 169 170 171, on right: 162
opt_cluster_param5 (143)
    on left: 172 173 174 175 176, on right: 162
opt_cluster_param6 (144)
    on left: 177 178, on right: 162
param_list_scheduler (145)
    on left: 179, on right: 104
schedule_param1 (146)
    on left: 180 181 182 183, on right: 179
opt_schedule_param2 (147)
    on left: 184 185 186, on right: 179
mem_func (148)
    on left: 187 188 189 190 191 192 193, on right: 27 33


State 0

    0 $accept: . statement_list $end

    CHAR                  shift, and go to state 1
    FLOAT                 shift, and go to state 2
    FOR                   shift, and go to state 3
    IF                    shift, and go to state 4
    INT                   shift, and go to state 5
    VOID                  shift, and go to state 6
    WHILE                 shift, and go to state 7
    INC_OP                shift, and go to state 8
    DEC_OP                shift, and go to state 9
    BOOL                  shift, and go to state 10
    DO                    shift, and go to state 11
    NOT                   shift, and go to state 12
    AMP                   shift, and go to state 13
    TILDE                 shift, and go to state 14
    STAR                  shift, and go to state 15
    PROCESSOR             shift, and go to state 16
    LINK                  shift, and go to state 17
    CLUSTER               shift, and go to state 18
    JOB                   shift, and go to state 19
    MEMORY                shift, and go to state 20
    ID                    shift, and go to state 21
    SCHEDULER             shift, and go to state 22
    NUM                   shift, and go to state 23
    REAL                  shift, and go to state 24
    STRING_LITERAL        shift, and go to state 25
    GET_AVAILABLE_MEMORY  shift, and go to state 26
    GET_MEMORY            shift, and go to state 27
    IS_RUNNING            shift, and go to state 28
    SUBMIT_JOBS           shift, and go to state 29
    GET_CLOCK_SPEED       shift, and go to state 30
    DISCARD_JOB           shift, and go to state 31
    RUN                   shift, and go to state 32
    OPEN_BRACKET          shift, and go to state 33
    OPEN_CURLY            shift, and go to state 34
    OPEN_SQUARE           shift, and go to state 35
    SEMI                  shift, and go to state 36
    PLUS                  shift, and go to state 37
    MINUS                 shift, and go to state 38

    $default  reduce using rule 2 (statement_list)

    statement_list             go to state 39
    statement                  go to state 40
    declaration                go to state 41
    type_specifier             go to state 42
    primary_expression         go to state 43
    postfix_expression         go to state 44
    unary_expression           go to state 45
    unary_operator             go to state 46
    multiplicative_expression  go to state 47
    additive_expression        go to state 48
    relational_expression      go to state 49
    equality_expression        go to state 50
    and_expression             go to state 51
    exclusive_or_expression    go to state 52
    inclusive_or_expression    go to state 53
    logical_and_expression     go to state 54
    logical_or_expression      go to state 55
    conditional_expression     go to state 56
    assignment_expression      go to state 57
    expression                 go to state 58
    iteration_statement        go to state 59
    selection_statement        go to state 60
    expression_statement       go to state 61
    constructor                go to state 62
    mem_func                   go to state 63


State 1

   12 type_specifier: CHAR .

    $default  reduce using rule 12 (type_specifier)


State 2

   14 type_specifier: FLOAT .

    $default  reduce using rule 14 (type_specifier)


State 3

   89 iteration_statement: FOR . OPEN_BRACKET expression_statement expression_statement CLOSED_BRACKET statement
   90                    | FOR . OPEN_BRACKET expression_statement expression_statement expression CLOSED_BRACKET statement
   91                    | FOR . OPEN_BRACKET declaration expression_statement CLOSED_BRACKET statement
   92                    | FOR . OPEN_BRACKET declaration expression_statement expression CLOSED_BRACKET statement

    OPEN_BRACKET  shift, and go to state 64


State 4

   93 selection_statement: IF . OPEN_BRACKET expression CLOSED_BRACKET statement ELSE statement
   94                    | IF . OPEN_BRACKET expression CLOSED_BRACKET statement

    OPEN_BRACKET  shift, and go to state 65


State 5

   13 type_specifier: INT .

    $default  reduce using rule 13 (type_specifier)


State 6

   11 type_specifier: VOID .

    $default  reduce using rule 11 (type_specifier)


State 7

   87 iteration_statement: WHILE . OPEN_BRACKET expression CLOSED_BRACKET statement

    OPEN_BRACKET  shift, and go to state 66


State 8

   47 unary_expression: INC_OP . unary_expression

    INC_OP                shift, and go to state 8
    DEC_OP                shift, and go to state 9
    NOT                   shift, and go to state 12
    AMP                   shift, and go to state 13
    TILDE                 shift, and go to state 14
    STAR                  shift, and go to state 15
    PROCESSOR             shift, and go to state 67
    LINK                  shift, and go to state 68
    CLUSTER               shift, and go to state 69
    JOB                   shift, and go to state 70
    MEMORY                shift, and go to state 71
    ID                    shift, and go to state 21
    SCHEDULER             shift, and go to state 22
    NUM                   shift, and go to state 23
    REAL                  shift, and go to state 24
    STRING_LITERAL        shift, and go to state 25
    GET_AVAILABLE_MEMORY  shift, and go to state 26
    GET_MEMORY            shift, and go to state 27
    IS_RUNNING            shift, and go to state 28
    SUBMIT_JOBS           shift, and go to state 29
    GET_CLOCK_SPEED       shift, and go to state 30
    DISCARD_JOB           shift, and go to state 31
    RUN                   shift, and go to state 32
    OPEN_BRACKET          shift, and go to state 33
    OPEN_CURLY            shift, and go to state 72
    OPEN_SQUARE           shift, and go to state 35
    PLUS                  shift, and go to state 37
    MINUS                 shift, and go to state 38

    primary_expression  go to state 43
    postfix_expression  go to state 44
    unary_expression    go to state 73
    unary_operator      go to state 46
    constructor         go to state 62
    mem_func            go to state 63


State 9

   48 unary_expression: DEC_OP . unary_expression
